--- a/loja.css
+++ b/loja.css
@@ -109,7 +109,7 @@
     left: 28%;
     transition: height 2s, left 2s, font-size 2s, transform 2s, top 2s,
         width 2s, opacity 2s;
-    z-index: 450;
+    z-index: 9450;
 }
 
 #menu-login{
@@ -448,25 +448,27 @@ input{
     transform: translateX(-50%);
     height: 100%;
 /*    background-image: url(degrade-bg.png);*/
-    background-color: darkred;
-    background-image: url(football-no-lines.png);
+/*    background-color: darkred;*/
+/*    background-image: url(football-no-lines.png);*/
 /*    background-repeat: no-repeat;*/
 /*    background-size: cover;*/
 }
 
+
 #slogan{
     position: absolute;
     top: 15%;
-    left: 5%;
+    left: 30%;
     height: 10%;
 /*    color: A20D2A;*/
-    color: white;
+    color: black;
     font-family: candara;
     width: 100%;
-    font-size: 150%;
-    background-image: url(slogan-branco.png);
+    font-size: 300%;
+/*    background-image: url(slogan-branco.png);*/
     background-repeat: no-repeat;
 }
+
 
 #fundo{
     position: absolute;
@@ -476,9 +478,8 @@ input{
     /*background-image: url(degrade-bg.png);
     background-repeat: no-repeat;
     background-size: cover;*/
-    background-color: white;
 /*    background-color: A20D2A;*/
-/*    background-color: AF0835;*/
+    background-color: white;
 /*    background-color: e6db10;  */
     /*amarelo borussia*/
     background-image: url(asfalt-dark.png);
@@ -568,3 +569,25 @@ li{
 /*    background-color: black;*/
 }
 
+#menuCategorias{
+position: fixed;
+    width: 20%;
+    bottom: 75%;
+    background-color: pink;
+    height: 5%;
+    z-index: -50;
+    transform: translateX(-50%);
+    left: 50%;
+    border-radius: 100px;
+    transition: bottom 2s;
+}
+
+#produtos{
+position: absolute;
+    width: 80%;
+    left: 50%;
+    transform: translateX(-50%);
+    height: 100%;
+    top: 50%;
+    background-color: FF0C4D;
+}
